--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
             </ul>
         </div>
         <div class="gallery">
-            <a href="/images/friends/friends1.jpg" class="img">
-                <img src="/images/friends/friends1.jpg">
+            <a href="./images/friends/friends1.jpg" class="img">
+                <img src="./images/friends/friends1.jpg">
             </a>
-            <a href="/images/friends/friends2.jpg" class="img">
-                <img src="/images/friends/friends2.jpg">
+            <a href="./images/friends/friends2.jpg" class="img">
+                <img src="./images/friends/friends2.jpg">
             </a>
-            <a href="/images/friends/friends3.jpg" class="img">
-                <img src="/images/friends/friends3.jpg">
+            <a href="./images/friends/friends3.jpg" class="img">
+                <img src="./images/friends/friends3.jpg">
             </a>
-            <a href="/images/friends/friends4.jpg" class="img">
-                <img src="/images/friends/friends4.jpg">
+            <a href="./images/friends/friends4.jpg" class="img">
+                <img src="./images/friends/friends4.jpg">
             </a>
-            <a href="/images/friends/friends5.jpg" class="img">
-                <img src="/images/friends/friends5.jpg">
+            <a href="./images/friends/friends5.jpg" class="img">
+                <img src="./images/friends/friends5.jpg">
             </a>
-            <a href="/images/friends/friends6.jpg" class="img">
-                <img src="/images/friends/friends6.jpg">
+            <a href="./images/friends/friends6.jpg" class="img">
+                <img src="./images/friends/friends6.jpg">
             </a>
-            <a href="/images/friends/friends7.jpg" class="img">
-                <img src="/images/friends/friends7.jpg">
+            <a href="./images/friends/friends7.jpg" class="img">
+                <img src="./images/friends/friends7.jpg">
             </a>
-            <a href="/images/friends/friends8.jpg" class="img">
-                <img src="/images/friends/friends8.jpg">
+            <a href="./images/friends/friends8.jpg" class="img">
+                <img src="./images/friends/friends8.jpg">
             </a>
             <!-- <a href="/images/friends/friends9.jpg" class="img">
                 <img src="/images/friends/friends9.jpg">
