--- a/life.html
+++ b/life.html
@@ -25,34 +25,34 @@
             </ul>
         </div>
         <div class="gallery">
-            <a href="/images/life/life1.jpg" class="img">
-                <img src="/images/life/life1.jpg">
+            <a href="./images/life/life1.jpg" class="img">
+                <img src="./images/life/life1.jpg">
             </a>
-            <a href="/images/life/life2.jpg" class="img">
-                <img src="/images/life/life2.jpg">
+            <a href="./images/life/life2.jpg" class="img">
+                <img src="./images/life/life2.jpg">
             </a>
-            <a href="/images/life/life3.jpg" class="img">
-                <img src="/images/life/life3.jpg">
+            <a href="./images/life/life3.jpg" class="img">
+                <img src="./images/life/life3.jpg">
             </a>
-            <a href="/images/life/life4.jpg" class="img">
-                <img src="/images/life/life4.jpg">
+            <a href="./images/life/life4.jpg" class="img">
+                <img src="./images/life/life4.jpg">
             </a>
-            <a href="/images/life/life5.jpg" class="img">
-                <img src="/images/life/life5.jpg">
+            <a href="./images/life/life5.jpg" class="img">
+                <img src="/.images/life/life5.jpg">
             </a>
-            <a href="/images/life/life6.jpg" class="img">
-                <img src="/images/life/life6.jpg">
+            <a href="./images/life/life6.jpg" class="img">
+                <img src="./images/life/life6.jpg">
             </a>
-            <a href="/images/life/life7.jpg" class="img">
-                <img src="/images/life/life7.jpg">
+            <a href="./images/life/life7.jpg" class="img">
+                <img src="./images/life/life7.jpg">
             </a>
-            <a href="/images/life/life8.jpg" class="img">
-                <img src="/images/life/life8.jpg">
+            <a href="./images/life/life8.jpg" class="img">
+                <img src="./images/life/life8.jpg">
             </a>
         </div>
         <div class="instagram">
             Visit our page on <a href="https://www.instagram.com/friends.feelings/">Instagram</a>
-        </div>
+        </div>.
     </main>
     <script>
         $(".gallery").magnificPopup({
