--- a/love.html
+++ b/love.html
@@ -25,29 +25,29 @@
             </ul>
         </div>
         <div class="gallery">
-            <a href="/images/love/love1.jpg" class="img">
-                <img src="/images/love/love1.jpg">
+            <a href="./images/love/love1.jpg" class="img">
+                <img src="./images/love/love1.jpg">
             </a>
-            <a href="/images/love/love2.jpg" class="img">
-                <img src="/images/love/love2.jpg">
+            <a href="./images/love/love2.jpg" class="img">
+                <img src="./images/love/love2.jpg">
             </a>
-            <a href="/images/love/love3.jpg" class="img">
-                <img src="/images/love/love3.jpg">
+            <a href="./images/love/love3.jpg" class="img">
+                <img src="./images/love/love3.jpg">
             </a>
-            <a href="/images/love/love4.jpg" class="img">
-                <img src="/images/love/love4.jpg">
+            <a href="./images/love/love4.jpg" class="img">
+                <img src="./images/love/love4.jpg">
             </a>
-            <a href="/images/love/love5.jpg" class="img">
-                <img src="/images/love/love5.jpg">
+            <a href="./images/love/love5.jpg" class="img">
+                <img src="./images/love/love5.jpg">
             </a>
-            <a href="/images/love/love6.jpg" class="img">
-                <img src="/images/love/love6.jpg">
+            <a href="./images/love/love6.jpg" class="img">
+                <img src="./images/love/love6.jpg">
             </a>
-            <a href="/images/friends/love7.jpg" class="img">
-                <img src="/images/love/love7.jpg">
+            <a href="./images/friends/love7.jpg" class="img">
+                <img src="./images/love/love7.jpg">
             </a>
-            <a href="/images/friends/love8.jpg" class="img">
-                <img src="/images/love/love8.jpg">
+            <a href="./images/friends/love8.jpg" class="img">
+                <img src="./images/love/love8.jpg">
             </a> 
         </div>
         <div class="instagram">
