--- a/life.html
+++ b/life.html
@@ -38,7 +38,7 @@
                 <img src="./images/life/life4.jpg">
             </a>
             <a href="./images/life/life5.jpg" class="img">
-                <img src="/.images/life/life5.jpg">
+                <img src="./images/life/life5.jpg">
             </a>
             <a href="./images/life/life6.jpg" class="img">
                 <img src="./images/life/life6.jpg">
