life button error fixed

--- a/love.html
+++ b/love.html
@@ -43,10 +43,10 @@
             <a href="./images/love/love6.jpg" class="img">
                 <img src="./images/love/love6.jpg">
             </a>
-            <a href="./images/friends/love7.jpg" class="img">
+            <a href="./images/love/love7.jpg" class="img">
                 <img src="./images/love/love7.jpg">
             </a>
-            <a href="./images/friends/love8.jpg" class="img">
+            <a href="./images/love/love8.jpg" class="img">
                 <img src="./images/love/love8.jpg">
             </a> 
         </div>
