--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a> --> 
         </div>
         <div class="instagram">
-            Follow us on <a href="https://www.instagram.com/friends.feelings/">Instagram</a>
+            Follow us on <a href="https://www.instagram.com/dontremindmeaboutme/">Instagram</a>
         </div>
             
     </main>
