--- a/life.html
+++ b/life.html
@@ -51,7 +51,7 @@
             </a>
         </div>
         <div class="instagram">
-            Follow us on <a href="https://www.instagram.com/friends.feelings/">Instagram</a>
+            Follow us on <a href="https://www.instagram.com/dontremindmeaboutme/">Instagram</a>
         </div>.
     </main>
     <script>
